[package]
name = "northstar"
version = "0.2.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Gemini server implementation"

[dependencies]
anyhow = "1.0.33"
rustls = { version = "0.18.1", features = ["dangerous_configuration"] }
tokio-rustls = "0.20.0"
tokio = { version = "0.3.1", features = ["full"] }
mime = "0.3.16"
uriparse = "0.6.3"
percent-encoding = "2.1.0"
futures = "0.3.7"
itertools = "0.9.0"
log = "0.4.11"
webpki = "0.21.0"
lazy_static = "1.4.0"
