[package]
name = "twinstar"
version = "0.4.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = 'Gemini server implementation (previously called "northstar")'
repository = "https://github.com/panicbit/twinstar"
documentation = "https://docs.rs/twinstar"

[features]
default = ["serve_dir"]
serve_dir = ["mime_guess", "tokio/fs"]

[dependencies]
anyhow = "1.0.33"
rustls = { version = "0.18.1", features = ["dangerous_configuration"] }
tokio-rustls = "0.20.0"
tokio = { version = "0.3.1", features = ["io-util","net","time", "rt"] }
mime = "0.3.16"
uriparse = "0.6.3"
percent-encoding = "2.1.0"
futures-core = "0.3.7"
log = "0.4.11"
webpki = "0.21.0"
lazy_static = "1.4.0"
mime_guess = { version = "2.0.3", optional = true }

[dev-dependencies]
env_logger = "0.8.1"
futures-util = "0.3.7"
tokio = { version = "0.3.1", features = ["macros", "rt-multi-thread", "sync"] }

[[example]]
name = "serve_dir"
required-features = ["serve_dir"]
